# granian-channels-lock-up

./: .gitignore  README.md  main.py  pyproject.toml
app/: consumers.py  routing.py  urls.py  views.py
config/: asgi.py  settings.py  urls.py
scripts/: lockup_test.py  repro_lockup.py
